--- a/Application/static/package.json
+++ b/Application/static/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weibot",
+  "name": "miniPG",
   "version": "1.0.0",
   "description": "my playground",
   "main": "index.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/qiuzhihui/weibot.git"
+    "url": "git+https://github.com/qiuzhihui/miniPG.git"
   },
   "keywords": [
     "fullstack",
@@ -31,9 +31,9 @@
     ]
   },
   "bugs": {
-    "url": "https://github.com/qiuzhihui/weibot/issues"
+    "url": "https://github.com/qiuzhihui/miniPG/issues"
   },
-  "homepage": "https://github.com/qiuzhihui/weibot#readme",
+  "homepage": "https://github.com/qiuzhihui/miniPG#readme",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
